package todo;
syntax = "proto3";

service ListActions {
  rpc AddItem (Item) returns (ItemList) {}
  // rpc RemoveItem(Item) returns (ItemList) {}
  rpc GetList(GetListParams) returns (ItemList) {}
  rpc ItemStreamer(stream Item) returns (stream StreamResponse) {}
}

message GetListParams {}

message Item {
  optional string item = 1;
}

message ItemList {
  repeated Item items = 1;
}

message StreamResponse {
  optional string msg = 1;
}